feat(Updater): handle errors graciously

--- a/app/src/main/res/values-ar-rSA/strings.xml
+++ b/app/src/main/res/values-ar-rSA/strings.xml
@@ -127,8 +127,8 @@
   <string name="installer_abort_title">هل تريد الخروج؟</string>
   <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation? Cached files will be cleared to avoid corruption.</string>
   <string name="updater_body">تم إصدار تحديث جديد لمدير Aliucord Manager! قد تكون مطلوبة من أجل العمل بشكل صحيح. هل ترغب في التحديث؟</string>
-  <string name="updater_title">تم التحديث الي %1$s</string>
-  <string name="updater_fail">فشل في التحقق من وجود تحديثات</string>
+  <string name="updater_title">تم التحديث الي v%s</string>
+  <string name="updater_check_fail">فشل في التحقق من وجود تحديثات</string>
   <string name="downloader_err_unknown">فشل التنزيل (مجهول)</string>
   <string name="downloader_err_timeout">فشل التنزيل (المهلة)</string>
   <string name="downloader_err_response">فشل التحميل (استجابة غير صالحة)</string>
