--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -127,8 +127,8 @@
   <string name="installer_abort_title">Really exit?</string>
   <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation? Cached files will be cleared to avoid corruption.</string>
   <string name="updater_body">Nowa aktualizacja dla Menadżera Aliucorda! Może być wymagana do prawidłowego działania. Czy chcesz zaktualizować?</string>
-  <string name="updater_title">Aktualizowanie do %1$s</string>
-  <string name="updater_fail">Nie udało się sprawdzić aktualizacji!</string>
+  <string name="updater_title">Aktualizowanie do v%s</string>
+  <string name="updater_check_fail">Nie udało się sprawdzić aktualizacji!</string>
   <string name="downloader_err_unknown">Pobieranie nie powiodło się (Powód nieznany)</string>
   <string name="downloader_err_timeout">Pobieranie nie powiodło się (Upłynął limit czasu)</string>
   <string name="downloader_err_response">Pobieranie nie powiodło się (Nieprawidłowa odpowiedź)</string>
