--- a/app/src/main/res/values-da-rDK/strings.xml
+++ b/app/src/main/res/values-da-rDK/strings.xml
@@ -127,8 +127,8 @@
   <string name="installer_abort_title">Afslut, sikker?</string>
   <string name="installer_abort_body">Sikker på, at den igangværende installation skal afbrydes?</string>
   <string name="updater_body">Ny opdatering udgivet! Den kan være nødvendig for korrekt funktion af Aliucord Manager. Opdatér?</string>
-  <string name="updater_title">Opdatér til %1$s</string>
-  <string name="updater_fail">Failed to check for updates!</string>
+  <string name="updater_title">Opdatér til v%s</string>
+  <string name="updater_check_fail">Failed to check for updates!</string>
   <string name="downloader_err_unknown">Download mislykkedes (ukendt)</string>
   <string name="downloader_err_timeout">Download mislykkedes (timeout)</string>
   <string name="downloader_err_response">Download mislykkedes (ugyldigt svar)</string>
