--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -127,8 +127,8 @@
   <string name="installer_abort_title">真的要退出吗？</string>
   <string name="installer_abort_body">您确定要中止正在进行的安装吗？</string>
   <string name="updater_body">Aliucord 管理器已发布新更新！可能需要此更新才能正常运行。您想更新吗？</string>
-  <string name="updater_title">更新到 %1$s</string>
-  <string name="updater_fail">Failed to check for updates!</string>
+  <string name="updater_title">更新到 v%s</string>
+  <string name="updater_check_fail">Failed to check for updates!</string>
   <string name="downloader_err_unknown">下载失败（未知）</string>
   <string name="downloader_err_timeout">Download failed (Timeout)</string>
   <string name="downloader_err_response">下载失败（无效响应）</string>
