--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -127,8 +127,8 @@
   <string name="installer_abort_title">確定離開？</string>
   <string name="installer_abort_body">Are you sure you really want to abort an in-progress installation? Cached files will be cleared to avoid corruption.</string>
   <string name="updater_body">Aliucord Manager 已發布新更新！Aliucord Manager 可能需要它才能正常運行。您想更新嗎？</string>
-  <string name="updater_title">更新到 %1$s</string>
-  <string name="updater_fail">Failed to check for updates!</string>
+  <string name="updater_title">更新到 v%s</string>
+  <string name="updater_check_fail">Failed to check for updates!</string>
   <string name="downloader_err_unknown">無法下載（未知）</string>
   <string name="downloader_err_timeout">Download failed (Timeout)</string>
   <string name="downloader_err_response">無法下載（無效的回應）</string>
