--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -31,7 +31,7 @@
   <string name="action_open_info">Otwórz informacje</string>
   <string name="action_reset_default">Przywróć domyślne</string>
   <string name="permissions_grant_title">Przyznaj uprawnienia</string>
-  <string name="storage_permissions_grant_body">In order for Aliucord Manager to work properly, you need to grant file permissions. Since shared data in stored in ~/Aliucord, permissions are required in order for manager to function.</string>
+  <string name="storage_permissions_grant_body">In order for Aliucord Manager to work properly, you need to grant file permissions. Since shared data is stored in ~/Aliucord, permissions are required in order for manager to function.</string>
   <string name="install_permissions_grant_body">Instalacja Aliucord\'a wymaga przyznania uprawnień do instalowania aplikacji z nieznanych źródeł.</string>
   <string name="installs_no_installs">No installations founds!</string>
   <string name="launch_aliucord_fail">Nie udało się uruchomić Aliucorda</string>
