--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,6 @@
   <string name="action_clear">Clear</string>
   <string name="action_launch">Launch</string>
   <string name="action_close">Close</string>
-  <string name="action_open_settings">Open settings</string>
   <string name="action_search">Search</string>
   <string name="action_copy">Copy</string>
   <string name="action_collapse">Collapse</string>
@@ -80,7 +79,7 @@
 
   <string name="navigation_back">Back</string>
   <string name="navigation_about">About</string>
-  <string name="navigation_logs">Open logs</string>
+  <string name="navigation_logs">Logs</string>
   <string name="navigation_settings">Settings</string>
 
   <string name="contributors_lead">Lead</string>
@@ -92,7 +91,6 @@
   <string name="network_warning_body">It appears you are connected to mobile data or a potentially metered network. Continuing with the installation may result in several hundred megabytes being downloaded. Are you sure you want to continue?</string>
   <string name="network_warning_disable">Don\'t show this again</string>
 
-  <string name="version_supported">Supported version:</string>
   <string name="version_none">None</string>
   <string name="version_stable">Stable</string>
   <string name="version_beta">Beta</string>
@@ -137,7 +135,6 @@
   <string name="patch_step_copy_deps">Copying dependencies</string>
   <string name="patch_step_patch_manifests">Patching APK manifest</string>
   <string name="patch_step_patch_icon">Patching app icon</string>
-  <string name="patch_step_add_injector">Adding Aliucord injector</string>
   <string name="patch_step_add_aliuhook">Adding Aliuhook library</string>
   <string name="patch_step_patch_smali">Applying smali patches</string>
   <string name="patch_step_reorganize_dex">Adding .dex files to APK</string>
