--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,11 +51,13 @@
   <string name="permissions_notifs_desc">Used only to show the download progress if Aliucord Manager is minimized during installation.</string>
 
   <string name="permissions_shizuku_denied">Failed to obtain Shizuku permissions</string>
+  <string name="permissions_root_denied">Failed to obtain root permissions</string>
 
   <string name="installs_no_installs">No installations found!</string>
   <string name="launch_aliucord_fail">Failed to launch Aliucord</string>
 
   <string name="settings_header_advanced">Advanced</string>
+  <string name="settings_header_installation">Installation</string>
   <string name="settings_header_appearance">Appearance</string>
   <string name="settings_header_info">Info</string>
   <string name="setting_theme">Theme</string>
@@ -64,10 +66,19 @@
   <string name="setting_dynamic_color_desc">Enables Material You theming on Android 12+</string>
   <string name="setting_developer_options">Developer options</string>
   <string name="setting_developer_options_desc">Don\'t enable this unless you know what it does! (yes, really)</string>
+  <string name="setting_installer">Installation Method</string>
+  <string name="setting_installer_desc">Changing this from the default is not recommended unless you know that it is applicable to your device.</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
   <string name="setting_keep_patched_apks_desc">Keep all patched files and APKs after installation for debugging purposes. Note that exporting the APK is only useful after a successful patching session.</string>
   <string name="settings_clear_cache">Clear cache</string>
   <string name="settings_export_apk">Export APK</string>
+
+  <string name="installer_pm">Direct</string>
+  <string name="installer_pm_desc">Invokes the PackageManager API directly from the app\'s context. (Default)</string>
+  <string name="installer_root">Root</string>
+  <string name="installer_root_desc">Invokes the PackageManager cli using device root such as Magisk or KernelSU.</string>
+  <string name="installer_shizuku">Shizuku</string>
+  <string name="installer_shizuku_desc">Invokes the PackageManager API remotely through Shizuku. ADB, WADB, and Root backends are all supported.</string>
 
   <string name="theme_system">System</string>
   <string name="theme_dark">Dark</string>
