--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,7 +42,7 @@
   <string name="permissions_grant">Grant</string>
   <string name="permissions_granted">Granted</string>
   <string name="permissions_install_title">Install from Unknown Sources</string>
-  <string name="permissions_install_desc">Install permissions are required to install Aliucord.</string>
+  <string name="permissions_install_desc">Permissions are required to initiate an installation from this app.</string>
   <string name="permissions_storage_title">External Storage</string>
   <string name="permissions_storage_desc">Aliucord and Manager stores shared data in ~/Aliucord, which requires full storage permissions. Scoped storage is not currently supported.</string>
   <string name="permissions_notifs_title">Notifications</string>
@@ -67,7 +67,7 @@
   <string name="setting_developer_options">Developer options</string>
   <string name="setting_developer_options_desc">Don\'t enable this unless you know what it does! (yes, really)</string>
   <string name="setting_installer">Installation Method</string>
-  <string name="setting_installer_desc">Changing this from the default is not recommended unless you know that it is applicable to your device.</string>
+  <string name="setting_installer_desc">Various methods are supported to interface with the system\'s package installer.</string>
   <string name="setting_keep_patched_apks">Keep patched APKs</string>
   <string name="setting_keep_patched_apks_desc">Keep all patched files and APKs after installation for debugging purposes. Note that exporting the APK is only useful after a successful patching session.</string>
   <string name="settings_clear_cache">Clear cache</string>
