feat: add import custom components intent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
   <string name="action_reset_default">Reset to default</string>
 
   <string name="intent_reinstall_fail">Failed to automatically reinstall! Please try doing it manually.</string>
+  <string name="intent_import_component_success">Successfully imported %s</string>
+  <string name="intent_import_component_failure">Failed to import custom component!</string>
 
   <string name="permissions_title">Grant Permissions</string>
   <string name="permissions_subtitle">Aliucord Manager requires permissions:</string>
