--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -68,11 +68,11 @@
   <string name="settings_clear_cache">Cache leeren</string>
   <string name="settings_export_apk">APK Exportieren</string>
   <string name="installer_pm">Direct</string>
-  <string name="installer_pm_desc">Invokes the PackageManager API directly from the app\'s context. (Default)</string>
+  <string name="installer_pm_desc">Invokes the PackageInstaller API directly from the app\'s context. (Default)</string>
   <string name="installer_root">Root</string>
-  <string name="installer_root_desc">Invokes the PackageManager cli using device root such as Magisk or KernelSU.</string>
+  <string name="installer_root_desc">Invokes PackageManager directly using device root such as Magisk or KernelSU.</string>
   <string name="installer_shizuku">Shizuku</string>
-  <string name="installer_shizuku_desc">Invokes the PackageManager API remotely through Shizuku. ADB, WADB, and Root backends are all supported.</string>
+  <string name="installer_shizuku_desc">Invokes the PackageInstaller API remotely through Shizuku. ADB, Wireless ADB, and Root backends are all supported.</string>
   <string name="theme_system">System</string>
   <string name="theme_dark">Dunkel</string>
   <string name="theme_light">Hell</string>
