--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -68,11 +68,9 @@
   <string name="settings_clear_cache">Gyorsítótár ürítése</string>
   <string name="settings_export_apk">APK exportálás</string>
   <string name="installer_pm">Közvetlen</string>
-  <string name="installer_pm_desc">Közvetlenül meghívja a PackageManager API-t az alkalmazás környezetén belül. (Alapértelmezett)</string>
+  <string name="installer_pm_desc">Közvetlenül meghívja a PackageInstaller API-t az alkalmazás környezetén belül. (Alapértelmezett)</string>
   <string name="installer_root">Root</string>
-  <string name="installer_root_desc">Root jogosultságokkal hívja meg a PackageManager CLI-t, mint például a Magisk vagy a KernelSU.</string>
   <string name="installer_shizuku">Shizuku</string>
-  <string name="installer_shizuku_desc">Távolról hívja meg a PackageManager API-t Shizuku-n keresztül. Az ADB, WADB, és root módszerek mind támogatottak.</string>
   <string name="theme_system">Rendszer</string>
   <string name="theme_dark">Sötét</string>
   <string name="theme_light">Világos</string>
