--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -68,11 +68,9 @@
   <string name="settings_clear_cache">캐시 지우기</string>
   <string name="settings_export_apk">APK 내보내기</string>
   <string name="installer_pm">직접 설치</string>
-  <string name="installer_pm_desc">앱에서 직접 PackageManager API를 호출해요. (기본)</string>
+  <string name="installer_pm_desc">앱에서 직접 PackageInstaller API를 호출해요. (기본)</string>
   <string name="installer_root">루트</string>
-  <string name="installer_root_desc">Magisk나 KernelSU와 같은 루트를 사용하여 PackageManager cli를 호출해요.</string>
   <string name="installer_shizuku">Shizuku</string>
-  <string name="installer_shizuku_desc">Shizuku를 사용해서 PackageManager API를 원격으로 호출해요. ADB, WADB, Root 백엔드 모두 지원돼요.</string>
   <string name="theme_system">시스템</string>
   <string name="theme_dark">어둡게</string>
   <string name="theme_light">밝게</string>
