--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -68,11 +68,9 @@
   <string name="settings_clear_cache">Limpar cache</string>
   <string name="settings_export_apk">Exportar APK</string>
   <string name="installer_pm">Direto</string>
-  <string name="installer_pm_desc">Invoca a API do PackageManager diretamente do contexto do aplicativo. (Padrão)</string>
+  <string name="installer_pm_desc">Invoca a API do PackageInstaller diretamente do contexto do aplicativo. (Padrão)</string>
   <string name="installer_root">Root</string>
-  <string name="installer_root_desc">Invoca a cli do PackageManager usando root como Magisk ou KernelSU.</string>
   <string name="installer_shizuku">Shizuku</string>
-  <string name="installer_shizuku_desc">Invoca a API do PackageManager remotamente através do Shizuku. As backends ADB, WADB e Root são suportadas.</string>
   <string name="theme_system">Sistema</string>
   <string name="theme_dark">Escuro</string>
   <string name="theme_light">Claro</string>
