--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,15 +79,15 @@
   <string name="settings_export_apk">Export APK</string>
 
   <string name="installer_pm">Direct</string>
-  <string name="installer_pm_desc">Invokes the PackageManager API directly from the app\'s context. (Default)</string>
+  <string name="installer_pm_desc">Invokes the PackageInstaller API directly from the app\'s context. (Default)</string>
   <string name="installer_root">Root</string>
   <string name="installer_intent">Intent</string>
   <string name="installer_intent_desc">Launches an intent to handle installation through the system\'s configured default installer.</string>
-  <string name="installer_root_desc">Invokes the PackageManager cli using device root such as Magisk or KernelSU.</string>
+  <string name="installer_root_desc">Invokes PackageManager directly using device root such as Magisk or KernelSU.</string>
   <string name="installer_shizuku">Shizuku</string>
-  <string name="installer_shizuku_desc">Invokes the PackageManager API remotely through Shizuku. ADB, WADB, and Root backends are all supported.</string>
+  <string name="installer_shizuku_desc">Invokes the PackageInstaller API remotely through Shizuku. ADB, Wireless ADB, and Root backends are all supported.</string>
   <string name="installer_dhizuku">Dhizuku</string>
-  <string name="installer_dhizuku_desc">Invokes the PackageManager API remotely through Dhizuku using DeviceOwner permissions.</string>
+  <string name="installer_dhizuku_desc">Invokes the PackageInstaller API remotely through Dhizuku using DeviceOwner permissions.</string>
 
   <string name="theme_system">System</string>
   <string name="theme_dark">Dark</string>
